<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_program_list">

    <fragment
        android:id="@+id/nav_manage_control"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.ManageControlFragment"
        android:label="@string/menu_manage_control"
        tools:layout="@layout/fragment_manage_control" />

    <dialog
        android:id="@+id/nav_add_control"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.AddControlDialogFragment"
        android:label="@string/menu_add_control"
        tools:layout="@layout/fragment_add_control_dialog" />

    <dialog
        android:id="@+id/nav_add_control_new"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.AddControlHostDialogFragment"
        android:label="@string/menu_add_control"
        tools:layout="@layout/fragment_add_control_host_dialog" />

    <fragment
        android:id="@+id/nav_program_list"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.ProgramListFragment"
        android:label="@string/menu_show_programs"
        tools:layout="@layout/fragment_program_list" >
        <action
            android:id="@+id/action_nav_program_list_to_activeProgramDetailsFragment"
            app:destination="@id/activeProgramDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_channel_list"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.ChannelMapFragment"
        android:label="@string/menu_channel_map_fragment_label"
        tools:layout="@layout/fragment_channel_list" >
        <action
            android:id="@+id/action_nav_channel_list_to_channelMapSingleFragment"
            app:destination="@id/channelMapSingleFragment" />
    </fragment>

    <fragment
        android:id="@+id/channelMapSingleFragment"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.ChannelMapSingleFragment"
        android:label="@string/channel_map_label"
        tools:layout="@layout/fragment_channel_single"/>

    <dialog
        android:id="@+id/nav_enter_challenge"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.EnterChallengeDialogFragment"
        android:label="EnterChallengeDialogFragment"
        tools:layout="@layout/fragment_enter_challenge_code_dialog"/>

    <fragment
        android:id="@+id/nav_remote_control"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.RemoteControlFragment"
        android:label="@string/menu_remote_control"
        tools:layout="@layout/fragment_remote_control"/>

    <fragment
        android:id="@+id/nav_help"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.SettingsFragment"
        android:label="@string/menu_settings"/>

    <fragment
        android:id="@+id/activeProgramDetailsFragment"
        android:name="org.andan.android.tvbrowser.sonycontrolplugin.ui.ActiveProgramDetailsFragment"
        android:label="@string/active_program_fragment_label"
        tools:layout="@layout/fragment_active_program_details"/>


</navigation>