<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_control_ip"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addControlIPEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/add_control_ip_hint"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/add_control_nick"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addControlNicknameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/add_control_nick_hint"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/add_control_device"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addControlDevicenameEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/add_control_device_hint"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />


</LinearLayout>