<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.andan.android.tvbrowser.sonycontrolplugin.MainActivity">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_settings" />-->

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/wake_on_lan"
        android:orderInCategory="10"
        android:title="@string/wol_action" />

    <item
        android:id="@+id/screen_off"
        android:orderInCategory="10"
        android:title="@string/screen_off_action" />

    <item
        android:id="@+id/screen_on"
        android:orderInCategory="10"
        android:title="@string/screen_on_action" />

</menu>
