<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="activeProgram"
            type="org.andan.av.sony.model.SonyPlayingContentInfo" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_program_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controlDetailIPValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@{activeProgram.title}" />

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/active_program_dispNumber"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controlDetailNicknameValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{activeProgram.dispNumber}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/active_program_program_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controlDetailDevicenameValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{activeProgram.programTitle}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/active_program_start_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controlDetailUuidValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{activeProgram.startDateTime}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/active_program_duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controlDetailCookieValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{Integer.toString(activeProgram.durationSec/60)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/active_program_source"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controlDetailCookieExpireValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{activeProgram.source}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/active_program_mediaType"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/controlDetailNumberOfProgramsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{activeProgram.mediaType}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View style="@style/Divider"/>

        </LinearLayout>

    </ScrollView>
</layout>